<resources>
    <string name="app_name">MovieSearch</string>
    <string name="title_activity_movie_detail">activity_movie_detail</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- activity_main.xml -->
    <string name="hint_edt_movie_name">Movie Name</string>
    <string name="btn_search">Search</string>

    <!-- activity_movie_detail.xml -->
    <string name="tv_title">"Title: "</string>
    <string name="tv_year">"Year: "</string>
    <string name="tv_genre">"Genre: "</string>
    <string name="tv_director">"Director: "</string>
    <string name="tv_actors">"Actors: "</string>
    <string name="tv_duration">"Duration: "</string>
    <string name="tv_rating">"ImDb Rating: "</string>
    <string name="tv_plot">"Plot: "</string>


</resources>
