<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MovieDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_title"
                android:background="@drawable/movedetail_textview_border" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_year"
                android:background="@drawable/movedetail_textview_border" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_genre"
                android:background="@drawable/movedetail_textview_border" />

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_director"
                android:background="@drawable/movedetail_textview_border" />

            <TextView
                android:id="@+id/tv_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_actors"
                android:background="@drawable/movedetail_textview_border" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_duration"
                android:background="@drawable/movedetail_textview_border" />

            <TextView
                android:id="@+id/tv_imdbRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rating"
                android:background="@drawable/movedetail_textview_border" />

            <TextView
                android:id="@+id/tv_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_plot"
                android:background="@drawable/movedetail_textview_border" />

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>